// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack API configuration should give correct API payload for creation 1`] = `
Object {
  "datalabInfo": Object {
    "domain": "test-datalabs.nerc.ac.uk",
    "name": "testlab",
  },
  "isPublic": true,
  "name": "notebookName",
  "sourcePath": "expectedSourcePath",
  "type": "jupyter",
}
`;

exports[`Stack API configuration should give correct API payload for deletion 1`] = `
Object {
  "datalabInfo": Object {
    "domain": "test-datalabs.nerc.ac.uk",
    "name": "testlab",
  },
  "name": "dataStoreName",
  "type": "jupyter",
}
`;

exports[`Stack API configuration should give correct API request for creation 1`] = `
Object {
  "internalEndpoint": "http://jupyter-notebookName",
  "name": "notebookName",
  "type": "jupyter",
  "url": "https://testlab-notebookName.test-datalabs.nerc.ac.uk",
}
`;
